# serva

./: .gitignore  Cargo.toml  Makefile  README.md  dbg_info  help_post.md
boot/: boot.asm  (+2 more)
kernel/: Cargo.toml  README.md
kernel/src/: arch.rs  debug.rs  devices.rs  init.rs  interface.rs  interrupts.rs  lib.rs  main.rs  memory.rs  multi_tasking.rs  service.rs  tasks.rs  testing.rs  util.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: constants.rs  context.rs  devices.rs  gdt.rs  init.rs  instructions.rs  interrupts.rs  paging.rs  rflags.rs  segmentation.rs  syscalls.rs  tables.rs  trampoline.rs  tss.rs
kernel/src/arch/x86_64/devices/: pic_8259.rs  uart_16550.rs
kernel/src/arch/x86_64/gdt/: segment.rs  selector.rs  table.rs
kernel/src/arch/x86_64/interrupts/: context.rs  gate.rs  idt.rs  instructions.rs
kernel/src/devices/: qemu.rs  uart_16550.rs
kernel/src/interface/: abi.rs  interrupts.rs  syscalls.rs
kernel/src/interface/syscalls/: accept.rs  connect.rs  error.rs  hello.rs  read.rs  request.rs  stat_endpoint.rs  write.rs
kernel/src/memory/: flush.rs  frame_allocator.rs  global_mapper.rs  heap.rs  info.rs  mapper.rs
kernel/src/memory/mapper/: page_walker.rs  phys_mapper.rs  tree_display.rs
kernel/src/multi_tasking/: scheduler.rs  sync.rs
kernel/src/multi_tasking/scheduler/: stack.rs  task.rs  thread.rs
kernel/src/multi_tasking/sync/: mutex.rs
kernel/src/service/: model.rs  service_table.rs
kernel/src/service/service_table/: endpoint_ref.rs  service_ref.rs  spec_ref.rs
kernel/src/tasks/: scheduler.rs  task.rs
kernel/src/util/: address.rs  collections.rs  display.rs  fixed_vec.rs  init_guard.rs  singleton.rs  sync.rs
kernel/src/util/collections/: fixed_vec.rs
kernel/src/util/sync/: expected.rs  once.rs  panic_once.rs  spin.rs
kernel/tests/: basic_boot.rs  breakpoint_isr.rs  pagefault_isr.rs
(+60 files in other folders)
