[package]
name = "kernel"
version = "1.0.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
spin = "0.9.8"
uart_16550 = "0.3.0"

[package.metadata.bootimage]
run-args = [
#    "-S",
    "-gdb", "tcp::1234",
    "-serial", "stdio",
    "-display", "none"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)