[package]
name = "kernel"
version = "1.0.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.5"

syscall = { path = "../libraries/syscall", features = ["user"] }
x86_64 = { path = "../libraries/x86_64" }
essentials = { path = "../libraries/essentials" }

[package.metadata.bootimage]
run-args = [
    #    "-S",
    "-gdb", "tcp::1234",
    "-serial", "stdio",
    "-display", "none"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)